tests/test_assets/semantic/invalid/control_flow/unreachable_after_return.cog
unreachable_after_return::() -> i32 {
    return 1;

    x := 2;
}