tests/test_assets/semantic/invalid/control_flow/unreachable_after_return.expected
semantic error at line 4: unreachable statement
1 semantic error generated.
